# maskbase

./: .gitignore  LICENSE  README.md  backend.spec  build-dmg-arm.sh  build-dmg-intel.sh  build-dmg.sh  index.html  package-lock.json  package.json  reset-app-data.sh  run_backend.py  vite.config.ts
backend/: main.py  requirements.txt
backend/models/: schemas.py
backend/services/: engines.py  llm.py  ocr.py  parser.py  scanner.py
pii-bench/: evaluate.py  models.py  requirements.txt  run.py  test_cases.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: maskbase.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
src/components/: BatchReviewView.tsx  ChatPanel.tsx  ChatSidebar.tsx  ChatView.tsx  DocumentViewer.tsx  DocxDocumentViewer.tsx  FloatingHeader.tsx  HomeView.tsx  InfoPage.tsx  ManifestView.tsx  MaskSymbol.tsx  RedactedText.tsx  ResultView.tsx  ReviewDocxViewer.tsx  ReviewImageViewer.tsx  ReviewPdfViewer.tsx  ScanningView.tsx  SettingsModal.tsx  TermsModal.tsx
src/lib/: docxHighlights.ts  exportRedacted.ts  fileTypes.ts  pdfHighlights.ts  saveFile.ts
src/services/: api.ts  tauri.ts  updateChecker.ts
src/stores/: appStore.ts  chatStore.ts
src/types/: index.ts
