[package]
name = "maskbase"
version = "0.3.1"
description = "MaskBase — Local PII Redaction"
authors = ["MaskBase contributors"]
edition = "2021"

[lib]
name = "maskbase_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
